syntax = "proto3";

service PCSServerService {
	rpc StartClientProcess (StartClientProcessRequest) returns (StartClientProcessReply);
	rpc StartServerProcess (StartServerProcessRequest) returns (StartServerProcessReply);
}

message StartClientProcessRequest {
	string username = 1;
	string url = 2;
	string scriptFilename = 3;
}	

message StartClientProcessReply {
	bool ok = 1;
}

message StartServerProcessRequest {
	string serverId = 1;
	string url = 2;
	string maxDelay = 3;
	string minDelay = 4;
}	

message StartServerProcessReply {
	bool ok = 1;
}